# NEA_LIFE

./: .env  Cargo.toml
src/: database.rs  life_simulation.db  main.rs  preset.rs
