[package]
name = "NEA"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["tokio", "debug", "canvas"] }
itertools = "0.12"
rand = "0.9.0"
rustc-hash = "2.1.1"
tokio = {version = "1.44.1", features = ["sync"] }
tracing-subscriber = "0.3"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

